# system_ofdma

./: atividade.ipynb  graphic.py  network.py  pyproject.toml  scheduler.py  settings.py  simulation.py  user_equipments.py  utils.py
