[tool.poetry]
name = "system-ofdma"
version = "0.1.0"
description = ""
authors = ["marianamf0 <“mmf.marianaf@gmail.com”>"]
readme = "README.md"
packages = [{include = "system_ofdma"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.3.1"
matplotlib = "^3.10.3"
pyqt5 = "^5.15.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
